<?xml version="1.0" encoding="utf-8"?>
<!--
**** String Values
**** @author rahulthakur
-->
<resources>

    <string name="app_name">Colour Memory</string>
    <string name="start_button">Normal Game</string>
    <string name="time_trial_button">Time Trial</string>
    <string name="theme_shop_button">Theme Shop</string>
    <string name="scores_button">High Scores</string>
    <string name="exit_button">Quit</string>
    <string name="reset_button">Reset Theme</string>
    <string name="current_score">0</string>
    <string name="time_left">0</string>
    <string name="card">Card</string>
    <string name="high_scores">High Scores</string>
    <string name="congrats">Congratulations</string>
    <string name="hint">Enter your name here..</string>
    <string name="new_score_msg">You have a new High Score</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
	
    <!-- Theme Names -->
    <string name="colour_theme">colour_</string>
    <string name="red_theme">red_</string>
    <string name="digimon_theme">s_digimons_</string>
    <string name="green_theme">green_</string>
    <string name="silver_theme">silver_</string>
    
    <!-- COLOURS -->
    <color name="orange_tang">#E4844A</color>
    <color name="purple_haze">#91204D</color>
    <color name="sad_yellow">#E8BF56</color>
    <color name="dirty_chocolate">#452632</color>
    <color name="chilled_lime">#E2F7CE</color>

    <string name="title_activity_theme_shop">ThemeShopActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="testing_testing_one_two_three">Testing Testing one two three</string>

</resources>