<?xml version="1.0" encoding="utf-8"?>
<!--
**** ColourMemory MainActivity Layout File - Portrait Mode
**** @author rahulthakur
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/bg"
	android:gravity="center_horizontal"
	tools:context="thakur.rahul.colourmemory.MainActivity" >
	
	<ImageView
			android:id="@+id/hkuLogo"
			android:layout_width="205dp"
			android:layout_height="230dp"
			android:layout_marginTop="10dp"
			android:layout_alignParentTop="true"
			android:layout_centerHorizontal="true"
			android:contentDescription="@string/app_name"
			android:scaleType="fitCenter"
			android:src="@drawable/hku_logo" />
	
	<ImageView
	    	android:id="@+id/logo"
			android:layout_width="490dp"
			android:layout_height="326dp"
			android:layout_marginTop="25dp"
			android:contentDescription="@string/app_name"
			android:layout_below="@id/hkuLogo"
			android:layout_centerHorizontal="true"
			android:src="@drawable/logo2"/>
    
		
	<LinearLayout
		android:layout_below="@id/logo"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_marginBottom="30dp"
		android:gravity="center"
		android:orientation="vertical" >

		<Button
			android:id="@+id/startButton"
			style="@style/buttonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/purple_button"
			android:onClick="startGame"
			android:text="@string/start_button" />
		<Button
			android:id="@+id/timeTrialButton"
			style="@style/buttonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:background="@drawable/cyan_button"
			android:onClick="startTimeTrial"
			android:text="@string/time_trial_button" />
		<Button
			android:id="@+id/themeShopButton"
			style="@style/buttonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:background="@drawable/yellow_button"
			android:onClick="openThemeShop"
			android:text="@string/theme_shop_button" />
		<Button
			android:id="@+id/scoresButton"
			style="@style/buttonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:background="@drawable/green_button"
			android:onClick="showScores"
			android:text="@string/scores_button" />

		<Button
			android:id="@+id/exitButton"
			style="@style/buttonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:background="@drawable/black_button2"
			android:onClick="closeApplication"
			android:text="@string/exit_button" />
		<Button
			android:id="@+id/resetButton"
			style="@style/buttonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:background="@drawable/black_button2"
			android:onClick="resetThemes"
			android:text="@string/reset_button" />
	</LinearLayout>

	<FrameLayout
		android:id="@+id/fragment_container_high_score_list_main"
		android:layout_width="match_parent"
		android:layout_height="match_parent" />

</RelativeLayout>