<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_tang"
    
    tools:context="thakur.rahul.colourmemory.ThemeShopActivity"
    android:id="@+id/theme_shop_main_layout" >
	
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    >
	    <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:id="@+id/theme_shop_button_layout" >
	
			<Button
			    android:id="@+id/red"
			    android:layout_width="0dp"
			    android:layout_weight="1"
			    android:layout_height="181dp"
			    android:layout_marginRight="4dp"
			    android:background="@drawable/red_back"
			    android:onClick="setTheme"
			    android:text="@string/red_theme"
			    android:textSize="0dip"/>
	
			<Button  
				android:id="@+id/colour"
				android:layout_width="0dp"
			    android:layout_weight="1"
			    android:layout_marginRight="4dp"
			    android:background="@drawable/colour_back"
				android:layout_height="181dp"
				android:onClick="setTheme"
				android:text="@string/colour_theme"
			    android:textSize="0dip" />
			<Button  
				android:id="@+id/green"
				android:layout_width="0dp"
			    android:layout_weight="1"
			    android:layout_marginRight="4dp"
			    android:background="@drawable/green_back"
				android:layout_height="181dp"
				android:onClick="setTheme"
				android:text="@string/green_theme"
			    android:textSize="0dip" />
			<Button 
				android:id="@+id/s_digimons"
				android:layout_width="0dp"
			    android:layout_weight="1" 
			    android:background="@drawable/s_digimons_back"
				android:layout_height="181dp"
				android:onClick="setTheme"
				android:text="@string/digimon_theme"
			    android:textSize="0dip"/> 
		</LinearLayout>	
	</LinearLayout>
    
	<FrameLayout
		android:id="@+id/fragment_container_pop_up_message"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true" />

</RelativeLayout>
