<?xml version="1.0" encoding="utf-8"?>
<!--
**** NewHighScoreFragment Layout File
**** @author rahulthakur
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:background="@android:color/white"
	android:clickable="true"
	android:gravity="center"
	android:orientation="vertical"
	android:soundEffectsEnabled="false" >

	<ImageView
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_margin="@dimen/small_gap"
		android:contentDescription="@string/congrats"
		android:alpha="0"
		android:src="@drawable/congratulations" />

	<TextView
	    android:id="@+id/popupMessage"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/small_gap"
		android:gravity="center"
		android:singleLine="false"
		android:text="@string/new_score_msg"
		android:textColor="@color/purple_haze"
		android:textSize="@dimen/medium_text" />

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		 >

		<Button
		    android:id="@+id/okayButton"
		    style="@style/buttonStyle"
		    android:layout_width="100dp"
		    android:layout_height="40dp"
		    android:layout_centerHorizontal="true"
		    android:layout_margin="@dimen/small_gap"
		    android:background="@drawable/red_button"
		    android:text="@string/ok" />

	</RelativeLayout>

</LinearLayout>